[package]
name = "paperplane"
version = "0.1.3"
authors = ["Emil Rasmus Merzin <rasmusmerzin@gmail.com>"]
edition = "2018"
description = "Async WebSocket library"
repository = "https://gitlab.com/rasmusmerzin/paperplane"
readme = "README.md"
license = "MIT"
keywords = ["websocket", "async"]

[dependencies]
async-std = "1"
async-tungstenite = { version = "0.10", features = ["async-std-runtime"] }
futures = "0.3"
