[package]
name = "paperplane"
version = "0.2.1"
authors = ["Emil Rasmus Merzin <rasmusmerzin@gmail.com>"]
edition = "2018"
description = "Async WebSocket library"
repository = "https://gitlab.com/rasmusmerzin/paperplane"
readme = "README.md"
license = "MIT"
keywords = ["websocket", "async"]

[dependencies]
async-std = "1"
async-tungstenite = "0.12"
futures = "0.3"

[dev-dependencies]
async-tungstenite = { version = "0.12", features = ["async-std-runtime"] }
